force-app/main/default/objects/RD_ProductList__c/RD_ProductList__c.object-meta.xml
<CustomObject>
    <label>RD ProductList</label>
    <nameField>
        <label>RD ProductList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ProductList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>