force-app/main/default/objects/RD_ProductList__c/fields/Dispaly__c.field-meta.xml
<CustomField>
    <fullName>Dispaly__c</fullName>
    <label>Dispaly</label>
    <length>200</length>
    <type>Text</type>
</CustomField>