force-app/main/default/objects/RD_ProductList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDC_Ext_ID__c</columns>
    <columns>Code__c</columns>
    <columns>Dispaly__c</columns>
    <columns>Flag__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>